# serializer version: 1
# name: TestUpdate.test_active
  dict({
    'active': True,
    'color': 'grey',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'Change test message content',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
  })
# ---
# name: TestUpdate.test_deactivate
  dict({
    'active': False,
    'color': 'grey',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'Change message',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
  })
# ---
# name: test_create
  dict({
    'active': True,
    'color': 'red',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'This is a new message',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'bob',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_get[None]
  dict({
    'active': True,
    'color': 'yellow',
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'message': 'This is a test message',
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 'fb085f7f',
    }),
  })
# ---
